--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="card-content">
                 <h2><i class="fa-solid fa-user-doctor section-icon"></i> نبذة عن العيادة</h2>
                 <p>
-                    المريض يأخذ حقه في الكشف الدقيق والوقت الازم للوصول للتشخيص، والكشف بالسونار ورسم القلب.
+                    أحرص على حصول مريضي على حقه الكامل في كشف طبي دقيق، مع تخصيص الوقت الكافي للوصول إلى التشخيص الصحيح، بالإضافة إلى إجراء الفحص بالسونار ورسم القلب
                 </p>
             </div>
         </section>
@@ -80,7 +80,7 @@
                     <i class="fa-solid fa-phone"></i> اتصل الآن
                 </a>
             </div>
-            <p class="phone-number">01092525566</p>
+           
         </section>
     </main>
 
@@ -89,5 +89,6 @@
     </footer>
 
 </body>
+
 
 </html>
