--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <!-- Intro Section -->
         <section class="card intro-section">
             <div class="card-content">
-                <h2><i class="fa-solid fa-user-doctor section-icon"></i> نبذة عن العيادة</h2>
+                <h2><i class="fa-solid fa-user-doctor section-icon"></i> مميزات العيادة</h2>
                 <p>
                     أحرص على حصول مريضي على حقه الكامل في كشف طبي دقيق، مع تخصيص الوقت الكافي للوصول إلى التشخيص الصحيح، بالإضافة إلى إجراء الفحص بالسونار ورسم القلب
                 </p>
@@ -92,3 +92,4 @@
 
 
 </html>
+
