--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         <section class="contact-section">
             <div class="buttons-container">
                 <a href="https://wa.me/201092525566" target="_blank" class="contact-btn whatsapp-btn">
-                    <i class="fa-brands fa-whatsapp"></i> تواصل واتساب
+                    <i class="fa-brands fa-whatsapp"></i> للحجز والأستعلام
                 </a>
                 <a href="tel:01092525566" class="contact-btn call-btn">
                     <i class="fa-solid fa-phone"></i> اتصل الآن
@@ -92,4 +92,5 @@
 
 
 </html>
+
 
